source-http-ingest/src/snapshots/source_http_ingest__test__discover_backwards_compatibility.snap
---
source: src/lib.rs
expression: result
---
{
  "bindings": [
    {
      "recommendedName": "webhook-data",
      "resourceConfig": {
        "$serde_json::private::RawValue": "{\"stream\":null,\"path\":null,\"idFromHeader\":null}"
      },
      "documentSchema": {
        "$serde_json::private::RawValue": "{\"properties\":{\"_meta\":{\"description\":\"These fields are automatically added by the connector, and do not need to be specified in the request body\",\"properties\":{\"headers\":{\"additionalProperties\":{\"type\":\"string\"},\"description\":\"HTTP headers that were sent with the request will get added here. Headers that are known to be sensitive or not useful will not be included\",\"type\":\"object\"},\"pathParams\":{\"description\":\"Parameters extracted from the path of the request, if configured\",\"properties\":{},\"required\":[],\"type\":\"object\"},\"receivedAt\":{\"description\":\"Timestamp of when the request was received by the connector\",\"format\":\"date-time\",\"type\":\"string\"},\"reqPath\":{\"description\":\"The configured path at which the request was received. Will include parameter placeholders if the path has them\",\"type\":\"string\"},\"webhookId\":{\"description\":\"The id of the webhook request, which is automatically added by the connector\",\"type\":\"string\"}},\"required\":[\"webhookId\",\"receivedAt\"],\"type\":\"object\"}},\"required\":[\"_meta\"],\"type\":\"object\",\"x-infer-schema\":true}"
      },
      "key": [
        "/_meta/webhookId"
      ]
    }
  ]
}
