source-http-ingest/src/snapshots/source_http_ingest__test__endpoint_config_schema.snap
---
source: src/lib.rs
expression: schema
---
{
  "$schema": "https://json-schema.org/draft/2019-09/schema",
  "title": "EndpointConfig",
  "type": "object",
  "properties": {
    "allowedCorsOrigins": {
      "title": "CORS Allowed Origins",
      "description": "List of allowed CORS origins.\nEach item will be interpreted as a specific request origin permitted by the Access-Control-Allow-Origin header.\nDefaults to [\"*\"], which allows all origins.\nSet to an empty array to disable CORS.\nMust not include \"*\" when an authentication token is configured.\nSee: https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Access-Control-Allow-Origin",
      "type": "array",
      "default": [
        "*"
      ],
      "items": {
        "type": "string"
      },
      "order": 3
    },
    "paths": {
      "title": "URL paths",
      "description": "List of URL paths to accept requests at.\n\nDiscovery will return a separate collection for each given path. Paths\nmust be provided without any percent encoding, and should not include\nany query parameters or fragment.\n\nPaths can include path parameters, following the syntax of OpenAPI path\ntemplating. For example, `/vendors/{vendorId}/products/{productId}`,\nwhich would accept a request to `/vendors/abc/products/123`. This would\nresult in captured data with\n`\"_meta\": { \"pathParams\": { \"vendorId\": \"abc\", \"productId\": \"123\"}, ...}`",
      "type": "array",
      "default": [
        "/webhook-data"
      ],
      "items": {
        "type": "string",
        "pattern": "/.+"
      },
      "order": 1
    },
    "requireAuthToken": {
      "title": "Authentication token",
      "description": "Optional bearer token to authenticate webhook requests.\n\nWARNING: If this is empty or unset, then anyone who knows the URL of the connector\nwill be able to write data to your collections.",
      "type": [
        "string",
        "null"
      ],
      "default": null,
      "order": 2,
      "secret": true
    },
    "signatureConfig": {
      "title": "Signature Verification",
      "description": "Configuration for verifying webhook signatures.\nIf set, incoming requests must include valid signature headers.",
      "type": "object",
      "default": {
        "provider": "none"
      },
      "discriminator": {
        "propertyName": "provider"
      },
      "oneOf": [
        {
          "title": "None",
          "properties": {
            "provider": {
              "type": "string",
              "const": "none",
              "default": "none",
              "order": 0
            }
          },
          "required": [
            "provider"
          ]
        },
        {
          "title": "Twilio SendGrid",
          "properties": {
            "maxSignatureAge": {
              "title": "Max Signature Age",
              "description": "Maximum age of a signed request in seconds before it is rejected. Defaults to 300 (5 minutes).",
              "type": "integer",
              "default": 300,
              "maximum": 259200,
              "minimum": 1,
              "order": 2
            },
            "provider": {
              "type": "string",
              "const": "twilio",
              "default": "twilio",
              "order": 0
            },
            "publicKey": {
              "title": "Public Key",
              "description": "PEM-encoded ECDSA public key from Twilio SendGrid Event Webhook settings.",
              "type": "string",
              "multiline": true,
              "order": 1,
              "secret": true
            }
          },
          "required": [
            "provider",
            "publicKey"
          ]
        },
        {
          "title": "Custom",
          "properties": {
            "algorithm": {
              "title": "Algorithm",
              "type": "string",
              "default": "hmac_sha256",
              "enum": [
                "hmac_sha256",
                "ecdsa"
              ],
              "order": 1
            },
            "maxSignatureAge": {
              "title": "Max Signature Age",
              "description": "Maximum age of a signed request in seconds before it is rejected. Only applies when a Timestamp Header is configured. Defaults to 300 (5 minutes).",
              "type": "integer",
              "default": 300,
              "maximum": 259200,
              "minimum": 1,
              "order": 7
            },
            "provider": {
              "type": "string",
              "const": "custom",
              "default": "custom",
              "order": 0
            },
            "publicKey": {
              "title": "Public Key",
              "description": "PEM-encoded public key for ECDSA, or shared secret for HMAC.",
              "type": "string",
              "multiline": true,
              "order": 2,
              "secret": true
            },
            "signatureEncoding": {
              "title": "Signature Encoding",
              "description": "Encoding of the signature value in the header. Defaults to hex.",
              "type": "string",
              "default": "hex",
              "enum": [
                "hex",
                "base64"
              ],
              "order": 4
            },
            "signatureHeader": {
              "title": "Signature Header",
              "description": "HTTP header containing the signature.",
              "type": "string",
              "order": 3
            },
            "signingStringTemplate": {
              "title": "Signing String Template",
              "description": "Template used to construct the string that is signed. Must include {PAYLOAD}, may include {TIMESTAMP}. Example: \"{TIMESTAMP}:{PAYLOAD}\".",
              "type": "string",
              "order": 5
            },
            "timestampHeader": {
              "title": "Timestamp Header",
              "description": "Optional HTTP header containing the timestamp.",
              "type": "string",
              "order": 6
            }
          },
          "required": [
            "provider",
            "algorithm",
            "publicKey",
            "signatureHeader",
            "signingStringTemplate"
          ]
        }
      ],
      "order": 4
    }
  }
}
